Third_commit_second_branch

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -9,7 +9,7 @@ on:
       - Second_branch
   workflow_run:
         workflows: ["Run Train"]
-        branches: [main]
+        branches: [Second_branch]
         types: 
             - completed
 
