--- a/.github/workflows/train.yml
+++ b/.github/workflows/train.yml
@@ -3,7 +3,7 @@ name: Train
 on:
   push:
     branches:
-      - First_barnch
+      - First_branch
   pull_request:
     branches:
       - First_branch
