--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -8,7 +8,7 @@ on:
     branches:
       - First_branch
   workflow_run:
-        workflows: ["Run Train"]
+        workflows: ["Train"]
         branches: ["First_branch"]
         types: 
             - completed
